Send message Button and Firebase functions

--- a/src/app/components/main-page/channel/channel.component.html
+++ b/src/app/components/main-page/channel/channel.component.html
@@ -3,4 +3,4 @@
   <app-chat-messages class="flex flex-col w-full" [messages]="messageService.messages()"
     [chatType]="'channel'"></app-chat-messages>
 </div>
-<app-chat-input class=""></app-chat-input>
+<app-chat-input [chatType]="'channel'"></app-chat-input>
