--- a/src/app/components/main-page/direct-message/direct-message.component.html
+++ b/src/app/components/main-page/direct-message/direct-message.component.html
@@ -11,4 +11,4 @@
                     Müller</span> und dir statt.</p>
         </div>
 </div>
-<app-chat-input></app-chat-input>
+<app-chat-input [chatType]="'dm'"></app-chat-input>
