--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -5,7 +5,7 @@
             <button><img class="size-5" src="assets/icons/emoji.svg" alt="Emoji"></button>
             <button><img class="size-5" src="assets/icons/at.svg" alt="@ User"></button>
         </div>
-        <button (click)="messageService.sendMessage()">
+        <button (click)="sendMessage()">
             <img class="size-5" src="assets/icons/send_message.svg" alt="Send message">
         </button>
     </div>
