--- a/src/app/components/main-page/new-message/new-message.component.html
+++ b/src/app/components/main-page/new-message/new-message.component.html
@@ -3,4 +3,4 @@
   <app-chat-messages class="flex flex-col w-full" [messages]="dummyThreatService.messages"
     [chatType]="'new'"></app-chat-messages>
 </div>
-<app-chat-input class=""></app-chat-input>
+<app-chat-input [chatType]="'new'"></app-chat-input>
