--- a/src/app/components/main-page/thread/thread.component.html
+++ b/src/app/components/main-page/thread/thread.component.html
@@ -30,5 +30,5 @@
         <app-chat-messages [messages]="threadService.getThread().content" [chatType]="'thread'"></app-chat-messages>
     
     </div>
-    <app-chat-input class=""></app-chat-input>
+    <app-chat-input [chatType]="'thread'"></app-chat-input>
 </section>
