--- a/src/app/components/shared/popUp/add-user/add-user.component.html
+++ b/src/app/components/shared/popUp/add-user/add-user.component.html
@@ -23,18 +23,18 @@
 
     @if (choiceInput) {
     <div class="border border-black h-14 rounded-[30px] px-5 py-[15px]">
-        <input [(ngModel)]="filterService.searchValue" class="w-full focus:outline-none" type="text"
+        <input [(ngModel)]="filterService.searchMembers" class="w-full focus:outline-none" type="text"
             placeholder="Name eingeben">
     </div>
 
     @if (true) {
-    <div class="absolute bottom-[-145px] border border-black w-60 h-60 bg-white rounded-[30px]">
+    <div class="absolute bottom-[-145px] border border-black w-60 h-60 bg-white rounded-[30px] overflow-auto py-4 flex flex-col gap-2">
       
-        <!-- @for (item of filterService.filterMembers(); track $index) {
-         <app-user [userInfo]="item" ></app-user>
-        } -->
+        @for (item of filterService.filteredMembers(); track $index) {
+         <app-user [userInfo]="item" (click)="channelService.addChoiceMembers(item)"></app-user>
+        }
 
-    </div>
+    </div> 
     }
 
 
