--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -1,5 +1,8 @@
-<section class="h-[145px] p-5 mx-4 flex flex-col justify-between bg-white rounded-[20px] border-lightpurple border-[1px]">
-    <input class="focus-visible:outline-none" type="text" placeholder="Antworten...">
+<section class="h-[145px] p-3 mx-4 flex flex-1 flex-col  bg-white rounded-[20px] border-lightpurple border-[1px]">
+   
+    <textarea [(ngModel)]="messageService.message.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+
+    
     <div class="flex items-center justify-between h-10">
         <div class="flex gap-[25px]">
             <button><img class="size-5" src="assets/icons/emoji.svg" alt="Emoji"></button>
@@ -8,5 +11,6 @@
         <button (click)="sendMessage()">
             <img class="size-5" src="assets/icons/send_message.svg" alt="Send message">
         </button>
+       
     </div>
 </section>
