--- a/src/app/components/landing-page/avatar/avatar.component.html
+++ b/src/app/components/landing-page/avatar/avatar.component.html
@@ -37,4 +37,12 @@
       Weiter
     </button>
   </div>
+
+  @if (showMessage) {
+  <div
+    class="fixed w-[323px] h-[70px] bottom-[8px] right-[8px] bg-purple1 text-white text-xl font-bold px-[30px] py-[20px] rounded-tl-[30px] rounded-tr-[30px] rounded-bl-[30px] shadow-lg z-50 transition-opacity duration-500"
+  >
+    Konto erfolgreich erstellt
+  </div>
+  }
 </main>
