--- a/src/app/components/navigation/direct-messages/direct-messages.component.html
+++ b/src/app/components/navigation/direct-messages/direct-messages.component.html
@@ -12,7 +12,7 @@
 
     <ul id="directList" class="flex flex-col gap-1">
         @for (userItem of userService.users; track $index) {
-        <li (click)="mainNavService.openChannel(true)"><app-user [userInfo]="userItem" ></app-user></li>
+        <li (click)="mainNavService.openChannel(true); dmService.openDMs(userItem) "><app-user [userInfo]="userItem" ></app-user></li>
         }
     </ul>
 
