--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -2,13 +2,13 @@
 
    @switch (chatType) {
     @case ('dm') {
-        <textarea [(ngModel)]="directMessageService.newMessage.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+        <textarea #messageInput [(ngModel)]="directMessageService.newMessage.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
     }
     @case ('channel') {
-        <textarea [(ngModel)]="messageService.message.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+        <textarea #messageInput [(ngModel)]="messageService.message.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
     }
     @case ('thread') {
-        <textarea [(ngModel)]="threadService.newThread" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+        <textarea #messageInput [(ngModel)]="threadService.newThread" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
     }
    }
 
