--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -12,7 +12,8 @@
 
 
   <div class="flex justify-center w-full">
-    <img class="size-52 rounded-[50%]" [src]="avatarUrl" alt="Profilbild" />
+    <!-- <img class="size-52 rounded-[50%]" src="currentUser" alt="Profilbild" /> -->
+    <img class="size-52 rounded-[50%]" src="{{currentUser.avatar}}" alt="">
   </div>
 
 
