--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -69,7 +69,7 @@
         <div class="flex-grow h-px bg-lightpurple"></div>
       </div>
 
-      <p *ngIf="error" class="text-red-500 text-sm text-center w-full">
+      <p *ngIf="error" class="w-full text-sm text-center text-red-500">
         {{ error }}
       </p>
 
@@ -94,7 +94,7 @@
           Anmelden
         </button>
         <button
-          (click)="authService.saveUserLocal()"
+          (click)="this.localStorageS.saveObject('currentUser', this.userService.GuestUser);"
           routerLink="main"
           type="button"
           class="flex-1 py-2 border rounded-full border-purple1 text-purple1 hover:bg-primary"
