--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,5 +1,13 @@
 <div class="w-full h-[80px] bg-primary flex justify-between items-center pr-[16px] pl-[16px]">
-  <img src="assets/imgs/logo.svg" alt="DaBubble Logo" class="h-16 mt-4" />
+  <img src="assets/imgs/logo.svg" alt="DaBubble Logo" class="hidden h-16 mt-4 sm:block" />
+
+
+  <div class="flex items-center gap-2 cursor-pointer sm:hidden" (click)="navService.openChannel(false)" >
+    <img src="/assets/icons/keyboard_arrow_down.svg" alt="">
+    <img src="/assets/imgs/workspace-logo.svg" alt="">
+    <p class="text-xl font-bold">DevSpace</p>
+  </div>
+  
 
   <app-search class="w-[50%] hidden lg:block self-end"></app-search>
 
