--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -1,18 +1,13 @@
 <section
   class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1) max-w-lg bg-white">
 
-
-
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
     <img (click)="overlayService.profileOverlay(true)"
       class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg" alt="" />
   </div>
 
-
-
   <div class="flex justify-center w-full">
-    <!-- <img class="size-52 rounded-[50%]" src="currentUser" alt="Profilbild" /> -->
     <img class="size-52 rounded-[50%]" src="{{currentUser.avatar}}" alt="">
   </div>
 
@@ -35,8 +30,7 @@
       @if (overlayService.usersProfilView) {} @else {
       <img
         class="max-[500px]:block cursor-pointer hidden hover:scale-[1.2] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px]"
-        (click)="overlayService.editProfileView()"
-        src="/assets/icons/edit2.svg" alt="" />
+        (click)="overlayService.editProfileView()" src="/assets/icons/edit2.svg" alt="" />
       <span
         class="max-[500px]:hidden cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9]  p-[3px] gap-[0px] transition-all text-purple1 ease-out"
         (click)="overlayService.editProfileView()">Bearbeiten</span>
@@ -62,8 +56,6 @@
 
   }
 
-
-
   @if (overlayService.usersProfilView) {
   <div class="flex justify-center w-full">
     <button
@@ -73,8 +65,6 @@
     </button>
   </div>
   }
-
-
 
   @if(overlayService.editProfil){
   <div class="flex justify-center w-full gap-8">
@@ -90,8 +80,5 @@
     </button>
   </div>
   }
-
-
-
 
 </section>
