--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -66,7 +66,7 @@
 </div>
 
 
-<div (click)="overlayService.profileOverlay(false)" [ngClass]="{hidden: overlayService.hideProfileOverlay}"
+<div (click)="overlayService.profileOverlay(false, currentUser)" [ngClass]="{hidden: overlayService.hideProfileOverlay}"
   class="absolute top-0 bottom-0 left-0 right-0 flex items-center justify-center z-[1] bg-[rgba(0,0,0,0.4)]">
   <app-profile (click)="$event.stopPropagation()" class="w-full max-w-lg"></app-profile>
 </div>
