--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -3,12 +3,12 @@
 
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
-    <img (click)="overlayService.profileOverlay(true)"
+    <img (click)="overlayService.profileOverlay(true, currentUser)"
       class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg" alt="" />
   </div>
 
   <div class="flex justify-center w-full">
-    <img class="size-52 rounded-[50%]" src="{{currentUser.avatar}}" alt="">
+    <img class="size-52 rounded-[50%]" src="{{overlayService.profileObj.avatar}}" alt="">
   </div>
 
 
@@ -25,7 +25,7 @@
   <div class="flex flex-col h-20 gap-4">
 
     <div class="flex justify-between">
-      <p class="flex text-3xl font-bold w-fit mr-[24px]">Frederik Beck</p>
+      <p class="flex text-3xl font-bold w-fit mr-[24px]">{{overlayService.profileObj.name}}</p>
 
       @if (overlayService.usersProfilView) {} @else {
       <img
@@ -50,7 +50,7 @@
 
     <div class="flex flex-col">
       <span class="font-bold">E-Mail-Adresse</span>
-      <a class="cursor-pointer text-linkblue hover:scale-[1.1] duration-200">test&#64;mail.de</a>
+      <a class="cursor-pointer text-linkblue hover:scale-[1.1] duration-200">{{overlayService.profileObj.email}}</a>
     </div>
   </div>
 
