--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -21,7 +21,8 @@
         (click)="overlayService.profileOverlay(true, dmService.othertUser); ">
         <div class="relative">
             <img class="size-[50px] rounded-full" src="{{ dmService.othertUser.avatar }}" alt="Avatar">
-            <img class="absolute bottom-0 right-0" src="assets/icons/online.svg" alt="Online">
+            <!-- <img class="absolute bottom-0 right-0" src="assets/icons/online.svg" alt="Online"> -->
+            <span class="absolute right-0 bg-online size-4 bottom-1 rounded-[50%] border-white border-2" [ngClass]="{'bg-online' :dmService.othertUser.online, 'bg-offline' : !dmService.othertUser.online}" ></span>
         </div>
         <p class="text-xl font-bold">{{ dmService.othertUser.name }}</p>
     </div>
