--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -39,8 +39,16 @@
     </div>
 
     <div class="flex items-center gap-4">
-      <div class="rounded-[50%] bg-online size-4"></div>
+      <div class="rounded-[50%] size-4"
+        [ngClass]="{'bg-online' :overlayService.profileObj.online, 'bg-offline' : !overlayService.profileObj.online}">
+      </div>
+      <!-- <span class="right-0 bg-online size-4 bottom-1 rounded-[50%] border-white "  ></span> -->
+      @if(overlayService.profileObj.online){
       Aktiv
+      } @else {
+      Abwesend
+      }
+
     </div>
 
   </div>
@@ -50,7 +58,7 @@
 
     <div class="flex flex-col">
       <span class="font-bold">E-Mail-Adresse</span>
-      <a class="cursor-pointer text-linkblue hover:scale-[1.1] duration-200">{{overlayService.profileObj.email}}</a>
+      <a class="cursor-pointer text-linkblue hover:scale-[1.1] duration-200"  [href]="'mailto:' + overlayService.profileObj.email" >{{overlayService.profileObj.email}}</a>
     </div>
   </div>
 
