--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -15,7 +15,7 @@
                 }
             }
             <!--  messageService.editMessage(i, chatType); -->
-            <div id="{{ chatType }}{{ i }}" (click)=" mainNavService.openThread(); messageService.openThread(message.id, message.threadId)" 
+            <div id="{{ chatType }}{{ i }}" (click)=" mainNavService.openThread(); messageService.onMessageClick(message)" 
                 class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary"
                 [ngClass]="{ 'flex-row-reverse': fromCurrentUser('user.id'), '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser('user.id')}">
                 <div>
