--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <img src="assets/imgs/logo.svg" alt="DaBubble Logo" class="hidden h-16 mt-4 sm:block" />
 
 
-  <div class="flex items-center gap-2 cursor-pointer sm:hidden" (click)="navService.openChannel(false)" >
+  <div class="flex items-center gap-2 cursor-pointer sm:hidden" (click)="navService.toggleNav()" >
     <img src="/assets/icons/keyboard_arrow_down.svg" alt="">
     <img src="/assets/imgs/workspace-logo.svg" alt="">
     <p class="text-xl font-bold">DevSpace</p>
