--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -53,7 +53,7 @@
                 } @else if (i === 4) {
                 <img class="border-2 border-white rounded-full cursor-pointer size-9" src="assets/imgs/avatar3.svg"
                     alt="Member">
-                <span class="ml-[10px]">{{ channelService.channels2[0].users?.length}}</span>
+                <span class="ml-[10px]">{{ channelService.getChannelMembers().length }}</span>
                 }
                 }
         </div>
