--- a/src/app/components/shared/chat-message-answer/chat-message-answer.component.html
+++ b/src/app/components/shared/chat-message-answer/chat-message-answer.component.html
@@ -1,4 +1,6 @@
 @if (message.answers > 0 && message.lastAnswer !== null) {
-    <span (click)="mainNavService.openThread(); getThread(message.threadId)" class="text-base text-purple3 hover:font-bold">{{ message.answers}} Antworten</span>
+    <span (click)="mainNavService.openThread()" class="text-base text-purple3 hover:font-bold">{{ message.answers}} Antworten</span>
     <span class="text-sm text-textgray">Letzte Antwort {{ messageService.formatTime(message.lastAnswer) }} Uhr</span>
 }
+
+<!-- ; getThread(message.threadId) -->
