write messages in channel threads - fix thread update

--- a/src/app/components/main-page/thread/thread.component.html
+++ b/src/app/components/main-page/thread/thread.component.html
@@ -13,7 +13,7 @@
                     <span class="text-sm">{{ threadMessagesService.currentMessage.timestamp }}</span>
                 </div>
                 <div class=" p-[15px] rounded-[30px] w-min" [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]': fromCurrentUser('user.id'), 'bg-primary rounded-ss-none': !fromCurrentUser('user.id') }">
-                    <span>{{ threadService.currentThread?.content }}</span>
+                    <span>{{ threadService.currentThread.content }}</span>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
             <div class="w-full h-[1px] bg-lightpurple"></div>
         </div>
         
-        <app-chat-messages [messages]="threadService.currentThread?.content" [chatType]="'thread'"></app-chat-messages>
+        <app-chat-messages [messages]="threadService.currentThread.content" [chatType]="'thread'"></app-chat-messages>
     
     </div>
     <app-chat-input [chatType]="'thread'"></app-chat-input>
