--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -19,12 +19,12 @@
                 class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary"
                 [ngClass]="{ 'flex-row-reverse': fromCurrentUser('user.id'), '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser('user.id')}">
                 <div>
-                    <img class="min-w-[50px] size-[50px] rounded-full" src="assets/imgs/avatar{{ 0 }}.svg" alt="Avatar">
+                    <img class="min-w-[50px] size-[50px] rounded-full" src="{{ userService.getUserById2(message.sender)?.avatar }}" alt="Avatar">
                 </div>
                 <div class="flex flex-col max-w-full gap-2">
                     <div class="flex items-center gap-5" [ngClass]="{ 'justify-end': fromCurrentUser('user.id')}">
-                        <span class="text-lg font-bold">{{ userService.getUserById2(message.sender) }}</span>
-                        <span class="text-sm">{{ messageService.formatTime(message.timestamp) }} Uhr</span>
+                        <span class="text-lg font-bold">{{ userService.getUserById2(message.sender)?.name }}</span>
+                        <span class="text-sm">{{ messageService.formatTime(message.timestamp) }}</span>
                     </div>
                     <div class="flex" id="msg-content"
                         class="bg-primary p-[15px] rounded-[30px] max-w-full"
