--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -17,25 +17,25 @@
             <!--  messageService.editMessage(i, chatType); -->
             <div id="{{ chatType }}{{ i }}" (click)="mainNavService.openThread(); openThread(message, i);" 
                 class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary"
-                [ngClass]="{ 'flex-row-reverse': fromCurrentUser('user.id'), '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser('user.id')}">
+                [ngClass]="{ 'flex-row-reverse':fromCurrentUser(message.sender), '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser(message.sender)}">
                 <div>
                     <img class="min-w-[50px] size-[50px] rounded-full" src="{{ userService.getUserById2(message.sender)?.avatar }}" alt="Avatar">
                 </div>
                 <div class="flex flex-col max-w-full gap-2">
-                    <div class="flex items-center gap-5" [ngClass]="{ 'justify-end': fromCurrentUser('user.id')}">
+                    <div class="flex items-center gap-5" [ngClass]="{ 'justify-end':fromCurrentUser(message.sender)}">
                         <span class="text-lg font-bold">{{ userService.getUserById2(message.sender)?.name }}</span>
                         <span class="text-sm">{{ messageService.formatTime(message.timestamp) }}</span>
                     </div>
                     <div class="flex" id="msg-content"
                         class="bg-primary p-[15px] rounded-[30px] max-w-full"
-                        [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]': fromCurrentUser('user.id'), ' rounded-ss-none': !fromCurrentUser('user.id') }">
+                        [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]':fromCurrentUser(message.sender), ' rounded-ss-none': !fromCurrentUser(message.sender) }">
                         <span class="max-w-full">{{ message.message }}</span>
                     </div>
                     
                     @if (message.threadId !== '' && chatType !== 'thread') {
                         <app-chat-message-answer
                             class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]"
-                            [ngClass]="{'self-end': fromCurrentUser('user.id')}"
+                            [ngClass]="{'self-end':fromCurrentUser(message.sender)}"
                             [message]="message"
                             [chatType]="chatType">
                         </app-chat-message-answer>
@@ -44,7 +44,7 @@
                     @if (message.reactions.length > 0) {
                         <app-chat-message-reactions
                             class="flex items-center gap-2 w-max"
-                            [ngClass]="{'self-end pr-[5px]': fromCurrentUser('user.id')}"
+                            [ngClass]="{'self-end pr-[5px]':fromCurrentUser(message.sender)}"
                             [message]="message">
                         </app-chat-message-reactions>
                     }
